# TestTask

./: CMakeLists.txt
src/: main.cpp
